update counter with event listeners linked to buttons

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,8 @@
    <link rel='stylesheet', href='/stylesheets/style.css'>
    <!--  Vue.js -->
    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+   <!--  Font Awesome -->
+   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
  </head>
  <body>
    <%- content %>
