changed v-on and v-bind to shorthand versions

--- a/views/directives/dynamic-link.ejs
+++ b/views/directives/dynamic-link.ejs
@@ -3,7 +3,7 @@
 <div class="container" id="app">
 <div class="row">
   <div class="col-12" style="text-align:center">
-    <p>This <a v-bind:href="dynamiclink" target="_blank">Dynamic link</a> will be updated based on the contents of the input field below</p>
+    <p>This <a :href="dynamiclink" target="_blank">Dynamic link</a> will be updated based on the contents of the input field below</p>
     <hr>
     <input type="text" v-model='dynamiclink'>
   </div>
