--- a/views/directives/dynamic-styling.ejs
+++ b/views/directives/dynamic-styling.ejs
@@ -3,22 +3,37 @@
 <div class="container" id="app">
 <div class="row">
   <div class="col-12" style="text-align:center">
-    <button class="btn btn-primary"
-    @click="isLarge = !isLarge"
-    :class="{ 'btn-lg': isLarge }">
-    {{size_text}}
-    </button>
-    <hr>
     <button class="btn"
     @click="changeButtonStyle"
-    :class="btnStyle">
+    :class="[btnStyle, btnSize]">
     change style
     </button>
-    <br>
-    <div style="margin:10px">
+    <div style="margin-top:15px">
       <input type="checkbox" id="buttonOutline" v-model='outline'>
       <label for="buttonOutline">Outline</label>
     </div>
+    <input type="radio" id="smallButton" value="small" v-model='buttonSize'>
+    <label for="smallButton">small</label>
+    <input type="radio" id="mediumButton" value="medium" v-model='buttonSize'>
+    <label for="mediumButton">medium</label>
+    <input type="radio" id="largeButton" value="large" v-model='buttonSize'>
+    <label for="largeButton">large</label>
+
+  </div>
+</div>
+<div class="row">
+  <div class="col-12" style="text-align:center">
+      <hr>
+      <p :style="textStyle">Style me</p>
+      <div class="form-group">
+        Font: <input type="text" v-model="fontFamily">
+      </div>
+      <div class="form-group">
+        Size: <input type="text" v-model="fontSize">
+      </div>
+      <div class="form-group">
+        Color: <input type="text" v-model="fontColor">
+      </div>
   </div>
 </div>
 </div>
@@ -27,24 +42,42 @@
   new Vue({
     el: '#app',
     data: {
-      isLarge: false,
       styleIndex: 0,
       buttonStyles: ['primary', 'secondary', 'success', 'info', 'warning',
       'danger', 'dark'],
-      outline: false
+      outline: false,
+      buttonSize: 'medium',
+      fontSize: 50,
+      fontColor: '#35495E',
+      fontFamily: 'Futura'
     },
     computed: {
-      size_text: function(){
-        return !this.isLarge? 'enlarge' : 'decrease';
-      },
       currentStyle: function(){
         return this.buttonStyles[this.styleIndex];
       },
-      outlineName: function(){
+      outlineClass: function(){
         return this.outline? 'outline-':'';
       },
       btnStyle: function(){
-        return 'btn-'+ this.outlineName +this.currentStyle;
+        return 'btn-'+ this.outlineClass + this.currentStyle;
+      },
+      btnSize: function(){
+        if(this.buttonSize == 'medium'){
+          return null;
+        }
+        else if (this.buttonSize == 'small') {
+          return 'btn-sm';
+        }
+        else if (this.buttonSize == 'large'){
+          return 'btn-lg';
+        };
+      },
+      textStyle: function(){
+        return {
+          'font-size': this.fontSize + 'px',
+          'color': this.fontColor,
+          'font-family': this.fontFamily
+        };
       }
     },
     methods: {
