delete items from table on click

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -8,3 +8,8 @@ body
 
 .hoverHighlight:hover
   color: $vue-green
+
+.hoverHighlightInvert:hover
+  background: $vue-green !important
+  color: white
+  cursor: pointer
