game data and dynamic display of game record

--- a/public/stylesheets/game.sass
+++ b/public/stylesheets/game.sass
@@ -14,5 +14,11 @@ $vue-gray: #35495E
 	background: $vue-green
 
 #controls
-	padding: 20px
+	width: 100%
+	padding: 20px 0
 	margin: 20px 0
+
+#record
+	width: 100%
+	margin: 20px 0
+	padding-top: 20px
