--- a/public/stylesheets/game.sass
+++ b/public/stylesheets/game.sass
@@ -14,5 +14,8 @@ $vue-gray: #35495E
 	background: $vue-green
 
 #record
-	max-height: 50vh
+	max-height: 50vw
 	overflow: scroll
+
+.btn-margin
+	margin: 5px
