--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -2,9 +2,14 @@ $vue-green: #41B883
 $vue-gray: #35495E
 
 body
-  padding: 100px
+	padding: 100px 20vw
   font: 14px Futura, sans-serif
   color: $vue-gray
+
+@media (max-width: 767.98px)
+	body
+		padding: 50px 10px 10px 10px
+
 
 .hoverHighlight:hover
   color: $vue-green
