--- a/views/exercises/game.ejs
+++ b/views/exercises/game.ejs
@@ -26,10 +26,10 @@
 			</button>
 		</template>
 		<template v-else>
-			<button class="btn btn-danger" @click='playerAttack'>attack</button>
-			<button class="btn btn-warning" @click='playerSpecialAttack'>special attack</button>
-			<button class="btn btn-success" @click='playerHeal'>heal</button>
-			<button class="btn btn-secondary" @click='newgame = !newgame'>
+			<button class="btn btn-danger btn-margin" @click='playerAttack'>attack</button>
+			<button class="btn btn-warning btn-margin" @click='playerSpecialAttack'>special attack</button>
+			<button class="btn btn-success btn-margin" @click='playerHeal'>heal</button>
+			<button class="btn btn-secondary btn-margin" @click='newgame = !newgame'>
 				give up
 			</button>
 		</template>
