--- a/views/exercises/game.ejs
+++ b/views/exercises/game.ejs
@@ -19,21 +19,23 @@
 	</div>
 </div>
 <div class="row shadowed spaced" id="controls">
-  <div class="col-12 center justify">
-		<template v-if='newgame'>
-			<button class="btn btn-success" @click='newgame = !newgame'>
-				start new game
-			</button>
-		</template>
-		<template v-else>
-			<button class="btn btn-danger btn-margin" @click='playerAttack'>attack</button>
-			<button class="btn btn-warning btn-margin" @click='playerSpecialAttack'>special attack</button>
-			<button class="btn btn-success btn-margin" @click='playerHeal'>heal</button>
-			<button class="btn btn-secondary btn-margin" @click='newgame = !newgame'>
-				give up
-			</button>
-		</template>
-  </div>
+    <div class="col-12 center justify">
+        <template v-if='newgame || winner'>
+          <h2 v-if='winner'>{{winner}} win<span v-if='winner != "you"'>s</span> </h2>
+          <button class="btn btn-success" @click='newgame = !newgame'>
+            New game
+          </button>
+        </template>
+        <template v-else>
+          <button class="btn btn-danger btn-margin" @click='playerAttack'>attack</button>
+          <button class="btn btn-warning btn-margin" @click='playerSpecialAttack'>special attack</button>
+          <button class="btn btn-success btn-margin" @click='playerHeal'>heal</button>
+          <button class="btn btn-secondary btn-margin" @click='newgame = !newgame'>
+            give up
+          </button>
+        </template>
+    </div>
+
 </div>
 <template v-if='!newgame && record.length > 0'>
 	<div class="row shadowed spaced" id="record">
@@ -65,6 +67,7 @@
       playerHealMaxForce: 7,
       botAttackMaxForce: 10,
 			record: [],
+      winner:''
     },
     computed:{
       recordChronologicalOrder: function(){
@@ -77,13 +80,13 @@
           this.playerhealth = this.maxhealth;
           this.bothealth = this.maxhealth;
           this.record = [];
+          this.winner = '';
         }
       },
       playerhealth: function(playerhealth){
         if(playerhealth <= 0){
           this.playerhealth = 0;
-          alert('bot wins!')
-          this.newgame = true;
+          this.winner = 'bot';
         }
         else if(playerhealth > 100){
           this.playerhealth = 100;
@@ -92,8 +95,7 @@
       bothealth: function(bothealth){
         if(bothealth <= 0){
           this.bothealth = 0;
-          alert('player wins!')
-          this.newgame = true;
+          this.winner = 'you';
         }
         else if(bothealth > 100){
           this.bothealth = 100;
