--- a/public/stylesheets/game.sass
+++ b/public/stylesheets/game.sass
@@ -12,6 +12,7 @@ $vue-gray: #35495E
 	width: 100%
 	height: 30px
 	background: $vue-green
+	transition: all 0.3s linear
 
 #record
 	max-height: 50vw
