--- a/public/stylesheets/game.sass
+++ b/public/stylesheets/game.sass
@@ -12,7 +12,13 @@ $vue-gray: #35495E
 	width: 100%
 	height: 30px
 	background: $vue-green
+	color: white
+	text-align: center
 	transition: all 0.3s linear
+
+.healthText
+	margin: 0
+	line-height: 2rem
 
 #record
 	max-height: 50vw
