vue development version

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,7 @@
    <!-- CSS -->
    <link rel='stylesheet', href='/stylesheets/style.css'>
    <!--  Vue.js -->
-   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
    <!--  Font Awesome -->
    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
  </head>
