--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -1,15 +1,29 @@
-$vue-green: #41B883
-$vue-gray: #35495E
+$vue-green: #42b983
+$vue-gray: #2c3e50
 
 body
 	padding: 100px 20vw
-  font: 14px Futura, sans-serif
+  font-family: 'Avenir', Helvetica, Arial, sans-serif
+  font-size: 14px
   color: $vue-gray
 
 @media (max-width: 767.98px)
 	body
 		padding: 50px 10px 10px 10px
 
+h1, h2
+  font-weight: normal
+
+ul
+  list-style-type: none
+  padding: 0
+
+li
+  display: inline-block
+  margin: 0 10px
+
+a
+  color: $vue-green
 
 .hoverHighlight:hover
   color: $vue-green
