created Quote input component with data binded to parent

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -50,3 +50,10 @@ a
 	width: 100%
 	padding: 20px 0
 	margin: 20px 0
+
+.flex-row
+	display: flex
+	flex-direction: row
+
+.inline-margin
+	margin: 0 5px
