handle 409 error user exists

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -1,5 +1,6 @@
 $vue-green: #42b983
 $vue-gray: #2c3e50
+$danger-red: #ff6666
 
 body
 	padding: 100px 20vw
@@ -59,5 +60,8 @@ a
 .inline-margin
 	margin: 0 5px
 
-.green-text
+.success-text
 	color: $vue-green
+
+.danger-text
+	color: $danger-red
